attempt to fix display of pick5 components on mobile

--- a/client/src/PickFive.css
+++ b/client/src/PickFive.css
@@ -1,6 +1,6 @@
 .PickFive {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-evenly;
   align-items: center;
   margin-top: calc(10px + 3vw);
   margin-bottom: 100px;
@@ -41,11 +41,11 @@
   .PickFive {
     height: 800px;
     flex-direction: column;
-    justify-content: space-between;
+    /*justify-content: space-between;*/
   }
 
   .PickFive > div {
-    height: 30px;
+    /*max-height: 10px;*/
   }
 
 }
