--- a/client/src/Picks.css
+++ b/client/src/Picks.css
@@ -1,6 +1,6 @@
 .Picks {
   display: flex;
-  justify-content: space-evenly;
+  justify-content: space-around;
   align-items: center;
   margin-top: calc(10vw - 40px);
   margin-bottom: 100px;
